--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,26 @@
 asgiref==3.3.1
+astroid==2.5
+autopep8==1.5.5
+certifi==2020.12.5
+chardet==4.0.0
+colorlog==4.7.2
 Django==3.1.6
 django-filter==2.4.0
+django-mathfilters==1.0.0
+idna==2.10
+isort==5.7.0
+lazy-object-proxy==1.5.2
+mccabe==0.6.1
+nose==1.3.7
 psycopg2-binary==2.8.6
+pycodestyle==2.6.0
+pylint==2.6.0
 pytz==2021.1
+PyYAML==5.4.1
+Random-Word==1.0.7
+requests==2.25.1
+rope==0.18.0
 sqlparse==0.4.1
+toml==0.10.2
+urllib3==1.26.3
+wrapt==1.12.1
