--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2020.12.5
 chardet==4.0.0
 colorlog==4.7.2
 Django==3.1.6
+django-environ==0.4.5
 django-filter==2.4.0
 django-mathfilters==1.0.0
 idna==2.10
@@ -12,6 +13,7 @@ isort==5.7.0
 lazy-object-proxy==1.5.2
 mccabe==0.6.1
 nose==1.3.7
+pkg-resources==0.0.0
 psycopg2-binary==2.8.6
 pycodestyle==2.6.0
 pylint==2.6.0
@@ -22,5 +24,7 @@ requests==2.25.1
 rope==0.18.0
 sqlparse==0.4.1
 toml==0.10.2
+typed-ast==1.4.2
 urllib3==1.26.3
+uWSGI==2.0.19.1
 wrapt==1.12.1
